gc log for img infer